--- a/css/styles.css
+++ b/css/styles.css
@@ -408,51 +408,60 @@ header .container .contacts-menu li .item:hover .icon {
     gap: 20px;
  }
 
-.portfolio .cards li:hover {
+ .card-container {
+  margin-bottom: 20px;
+  width: 370px;
+  border-bottom: 1px solid #EEEEEE;
+  position: relative;
+}
+
+.card-container:hover{
   box-shadow: 10px 10px 8px 2px rgba(0, 0, 0, 0.3);
 }
 
-.portfolio .cards li {
-    margin-bottom: 20px;
-    width: 370px;
-    border-bottom: 1px solid #EEEEEE;
-    position: relative;
-    overflow: hidden;
+.card-body{
+  padding: 20px 24px;
+  color: var(--primary-black-color);
 }
 
-  .portfolio .cards .overlay {
-      position: absolute;
-      font-size: 18px;
-      padding: 40px 30px;
-      letter-spacing: 0.03em;
-      line-height: 28px;
-      top: 0;
-      left: 0;
-      width: 370px; 
-      height: 290px;
-      transform: translateY(200%);
-      transition: transform 250ms ease; 
-      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-      text-align: justify;
-      background: rgba(33, 150, 243, 0.9);
-      color: var(--primary-white-color);
-  }
-
-.portfolio .cards:hover .overlay {
-    transform: translateY(0%);
-  }
-
-.portfolio .cards li a h2 {
-    color: var(--primary-black-color);
-    padding: 15px;
-}
-.portfolio .cards li a p {
-    color: var(--primary-black-color);
-    font-size: 16px;
-    padding: 15px;
+.card-body h2 {
+  padding: 15px;
 }
 
+.card-body p {
+  font-size: 16px;
+  padding: 15px;
+}
 
+.overlay {
+  position: absolute;
+  font-size: 18px;
+  padding: 40px 30px;
+  letter-spacing: 0.03em;
+  line-height: 28px;
+  top: 0;
+  left: 0;
+  width: 370px; 
+  height: 290px;
+  transform: translateY(200%);
+  transition: transform 250ms ease; 
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  text-align: justify;
+  background: rgba(33, 150, 243, 0.9);
+  color: var(--primary-white-color);
+}
+
+.card-image {
+  margin-bottom: 20px;
+  width: 370px;
+  border-bottom: 1px solid #EEEEEE;
+  position: relative;
+  overflow: hidden;
+}
+
+.card-container:hover .overlay{
+  transform: translateY(0%);
+}
 
 /* Seccion de clientes regulares */
 .customers .container h2{
@@ -574,13 +583,12 @@ footer {
 
   .backdrop{
     background: rgba(0, 0, 0, 0.2);
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     left: 0px;
     top: 0px;
-    /* transition: opacity 250ms cubic-bezier(0.4,0,0.2,1), visibility 250ms
-    cubic-bezier(0.4,0,0.2,1); */
+    z-index: 2;
   }
 
   .backdrop.is-hidden{
@@ -592,12 +600,14 @@ footer {
 
   .modal  {
     display: block;
-    position: absolute;
+    position: relative;
     width: 500px;
     height: 580px;
-    left: 430px;
+    left: 50%;
     top: 221px; 
-
+    transform: translateX(-50%);
+    z-index: 3;
+   
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
